# grafeo

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  README.md  _typos.toml  codecov.yml  deny.toml  mkdocs.yml
.claude/: settings.local.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  crates.yml  docs.yml  pypi.yml  release.yml
crates/bindings/c/: Cargo.toml  build.rs
crates/bindings/go/: README.md  admin.go  edge.go  errors.go  go.mod  grafeo.go  grafeo.h  grafeo_test.go  index.go  node.go  transaction.go  types.go  vector.go
crates/bindings/js/: README.md  package.json
crates/bindings/node/: Cargo.toml  package.json
crates/bindings/python/: Cargo.toml  pyproject.toml
crates/bindings/wasm/: Cargo.toml  README.md  grafeo_wasm.d.ts  package.json
crates/grafeo/: Cargo.toml  README.md
crates/grafeo-adapters/: Cargo.toml
crates/grafeo-cli/: Cargo.toml
crates/grafeo-cli/tests/: commands.rs
crates/grafeo-common/: Cargo.toml
crates/grafeo-common/src/: collections.rs  lib.rs  mvcc.rs
crates/grafeo-core/: Cargo.toml
crates/grafeo-core/benches/: index_bench.rs
crates/grafeo-core/src/: lib.rs
crates/grafeo-core/src/execution/: adaptive.rs  chunk.rs  chunk_state.rs  collector.rs  factorized_chunk.rs  factorized_iter.rs  factorized_vector.rs  mod.rs  source.rs  vector.rs
crates/grafeo-core/src/execution/operators/: aggregate.rs  distinct.rs  expand.rs  factorized_aggregate.rs  factorized_expand.rs  factorized_filter.rs  filter.rs  join.rs  leapfrog_join.rs  limit.rs  merge.rs  mod.rs  mutation.rs  project.rs  scan_vector.rs  shortest_path.rs  single_row.rs  unwind.rs  variable_length_expand.rs  vector_join.rs
crates/grafeo-core/src/execution/operators/push/: aggregate.rs  filter.rs  mod.rs  sort.rs
crates/grafeo-core/src/execution/parallel/: fold.rs  merge.rs  mod.rs  source.rs
crates/grafeo-core/src/execution/spill/: partition.rs  serializer.rs
crates/grafeo-core/src/graph/lpg/: edge.rs  mod.rs  node.rs  property.rs  store.rs
crates/grafeo-core/src/graph/rdf/: store.rs  triple.rs
crates/grafeo-core/src/index/: adjacency.rs  fingerprint.rs  fingerprinted_hash.rs  hash.rs  mod.rs  trie.rs  zone_map.rs
crates/grafeo-core/src/index/ring/: leapfrog.rs  mod.rs  permutation.rs  triple_ring.rs
crates/grafeo-core/src/index/vector/: config.rs  distance.rs  hnsw.rs  mod.rs  quantization.rs  quantized_hnsw.rs  simd.rs  storage.rs
crates/grafeo-core/src/statistics/: collector.rs  histogram.rs  rdf.rs
crates/grafeo-core/src/storage/: delta.rs  epoch_store.rs  mod.rs
crates/grafeo-core/src/storage/succinct/: elias_fano.rs  mod.rs  rank_select.rs  wavelet.rs
crates/grafeo-engine/: Cargo.toml
crates/grafeo-engine/src/: admin.rs  config.rs  database.rs  lib.rs  session.rs
crates/grafeo-engine/src/query/: binder.rs  cypher_translator.rs  gql_translator.rs  graphql_translator.rs  gremlin_translator.rs  plan.rs  planner.rs  planner_rdf.rs  processor.rs  sparql_translator.rs
crates/grafeo-engine/src/query/executor/: mod.rs
crates/grafeo-engine/src/query/optimizer/: cardinality.rs  cost.rs  join_order.rs  mod.rs
crates/grafeo-engine/src/transaction/: manager.rs  mod.rs  parallel.rs
crates/grafeo-engine/tests/: database_creation_options.rs  leapfrog_integration.rs  query_correctness.rs  snapshot.rs
crates/grafeo-python/: pyproject.toml
crates/grafeo/src/: lib.rs
crates/graphos/: Cargo.toml
crates/graphos-adapters/: Cargo.toml
crates/graphos-adapters/src/: lib.rs
crates/graphos-adapters/tests/: sparql_parser_tests.rs
crates/graphos-common/: Cargo.toml
crates/graphos-common/src/: lib.rs
crates/graphos-core/: Cargo.toml
crates/graphos-core/benches/: index_bench.rs
crates/graphos-core/src/: lib.rs
crates/graphos-core/tests/: rdf_tests.rs
crates/graphos-engine/: Cargo.toml
crates/graphos-engine/src/: config.rs  database.rs  lib.rs  session.rs
crates/graphos-engine/tests/: sparql_translator_tests.rs
crates/graphos-python/: Cargo.toml  README.md  pyproject.toml
crates/graphos-python/python/graphos/: __init__.py  graphos.cp314-win_amd64.pyd
crates/graphos-python/src/: database.rs  error.rs  graph.rs  lib.rs  query.rs  types.rs
crates/graphos-python/src/bridges/: algorithms.rs  mod.rs  networkx.rs  solvor.rs
crates/graphos/src/: lib.rs
docs/: index.md  llms.txt  roadmap.md
docs/algorithms/: centrality.md  community.md  index.md  link-prediction.md  metrics.md  path-finding.md  similarity.md
docs/api/: index.md
docs/api/python/: database.md  edge.md  index.md  node.md  result.md  transaction.md
docs/api/rust/: adapters.md  common.md  core.md  engine.md  index.md
docs/architecture/: crates.md  index.md  overview.md
docs/architecture/execution/: chunks.md  index.md  push-based.md  vectorized.md
docs/architecture/memory/: arena.md  buffer.md  index.md  spill.md
docs/architecture/optimization/: cardinality.md  cost.md  index.md  joins.md
docs/architecture/storage/: adjacency.md  columnar.md  compression.md  index.md  zone-maps.md
docs/architecture/transactions/: index.md  isolation.md  mvcc.md
docs/comparisons/: cypher-vs-gql.md  index.md  sparql-vs-gql.md
docs/contributing/: code-style.md  index.md  pull-requests.md  setup.md  testing.md
docs/ecosystem/: anywidget-graph.md  anywidget-vector.md  grafeo-server.md  graph-bench.md  index.md  interactive-demo.md  performance.md
docs/getting-started/: cli.md  configuration.md  glossary.md  index.md  installation.md  migration.md  security.md  troubleshooting.md
docs/overrides/: main.html
docs/stylesheets/: extra.css
docs/user-guide/: index.md
examples/: fraud_detection.py  graph_visualization.py  networkx_integration.py  vector_search.py
tests/python/: benchmark_graphos.py  benchmark_phases.py  conftest.py  requirements.txt  synthetic_data.py  test_algorithms_benchmark.py  test_graph_models.py  test_graphos.py  test_query_languages.py
(+285 files in other folders)
