[package]
name = "grafeo-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Query engine and database management for Grafeo"

[dependencies]
grafeo-common.workspace = true
grafeo-core.workspace = true
grafeo-adapters.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Data structures
smallvec.workspace = true
hashbrown.workspace = true
indexmap.workspace = true

# Concurrency
parking_lot.workspace = true
crossbeam = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }

# Async
tokio.workspace = true

# Serialization
serde.workspace = true

# Regex for SPARQL FILTER
regex = "1"

# Tracing
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true
serde_json = "1"

[features]
default = ["gql", "parallel", "wal"]
gql = ["grafeo-adapters/gql"]
cypher = ["grafeo-adapters/cypher"]
sparql = ["grafeo-adapters/sparql"]
gremlin = ["grafeo-adapters/gremlin"]
graphql = ["grafeo-adapters/graphql"]
rdf = ["grafeo-core/rdf", "grafeo-adapters/rdf"]  # RDF graph model and planner
parallel = ["rayon", "crossbeam", "grafeo-core/parallel", "grafeo-adapters/parallel"]  # Parallel execution
wal = ["grafeo-adapters/wal"]  # Write-ahead log storage
full = ["gql", "cypher", "sparql", "gremlin", "graphql", "rdf", "parallel", "wal"]
vector-index = ["grafeo-core/vector-index"]  # HNSW vector index for k-NN search
block-stm = []  # Block-STM parallel transaction execution

[lints]
workspace = true

[[bench]]
name = "query_bench"
harness = false
